TOOL: add typescript and ts-node

--- a/package.json
+++ b/package.json
@@ -5,5 +5,9 @@
   "main": "index.js",
   "repository": "git@github.com:monday-sun/react-card-gen.git",
   "author": "Monday Romelfanger <monday.romelfanger@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  }
 }
