--- a/package.json
+++ b/package.json
@@ -7,12 +7,18 @@
   "author": "Monday Romelfanger <monday.romelfanger@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "lint": "eslint",
     "card-gen": "node build/react-card-gen.js",
     "build": "tsc",
     "build:watch": "tsc -w"
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
+    "eslint": "^9.1.1",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.8.0"
   }
 }
