--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "lint": "eslint",
     "card-gen": "node build/react-card-gen.js",
     "build": "tsc",
-    "build:watch": "tsc -w"
+    "build:watch": "tsc -w",
+    "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
+    "@types/jest": "^29.5.12",
     "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
     "globals": "^15.1.0",
+    "jest": "^29.7.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
