--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "git@github.com:monday-sun/react-card-gen.git",
   "author": "Monday Romelfanger <monday.romelfanger@gmail.com>",
   "license": "MIT",
+  "bin": {
+    "react-card-gen": "./build/react-card-gen.js"
+  },
   "scripts": {
     "lint": "eslint",
     "card-gen": "node build/react-card-gen.js",
