--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,80 +8,38 @@ on:
   workflow_dispatch:
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Use Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '21'
-
-      - name: Install dependencies
-        run: yarn install
-
-      - name: Get yarn cache directory path
-        id: yarn-cache-dir-path
-        run: echo "dir=$(yarn cache dir)" >> $GITHUB_OUTPUT
-
-      - uses: actions/cache/save@v3
-        id: yarn-cache
-        with:
-          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-
   lint:
-    needs: setup
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-
-      - uses: actions/cache/restore@v3
-        id: restore-cache
-        with:
-          key: cache-${{ hashFiles('**/yarn.lock') }}
 
       - name: yarn install
-        run: yarn install --prefer-offline
+        run: yarn install --frozen-lockfile
 
       - name: Run lint
         run: yarn lint
 
   build:
-    needs: setup
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/cache/restore@v3
-        id: restore-cache
-        with:
-          key: cache-${{ hashFiles('**/yarn.lock') }}
-
       - name: yarn install
-        run: yarn install --prefer-offline
+        run: yarn install --frozen-lockfile
 
       - name: Build
         run: yarn build
 
   test:
-    needs: setup
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
 
-      - uses: actions/cache/restore@v3
-        id: restore-cache
-        with:
-          key: cache-${{ hashFiles('**/yarn.lock') }}
-
       - name: yarn install
-        run: yarn install --prefer-offline
+        run: yarn install --frozen-lockfile
 
       - name: Run tests
         run: yarn test
