--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "test": "jest"
   },
   "devDependencies": {
-    "@eslint/js": "^9.1.1",
+    "@eslint/js": "^8.56.0",
     "@types/jest": "^29.5.12",
-    "eslint": "^9.1.1",
+    "@types/node": "^20.12.7",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.34.1",
