--- a/package.json
+++ b/package.json
@@ -5,5 +5,31 @@
   "main": "index.js",
   "repository": "git@github.com:monday-sun/react-card-gen.git",
   "author": "Monday Romelfanger <monday.romelfanger@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "bin": {
+    "react-card-gen": "./build/react-card-gen.js"
+  },
+  "scripts": {
+    "react-card-gen": "node ./build/react-card-gen.js",
+    "lint": "eslint",
+    "format": "prettier --write .",
+    "build": "tsc",
+    "build:watch": "tsc -w",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@eslint/js": "^8.56.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.7",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "globals": "^15.1.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.8.0"
+  }
 }
