--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "scripts": {
     "react-card-gen": "node ./build/react-card-gen.js",
+    "clean": "rm -rf ./build",
     "lint": "eslint",
     "format": "prettier --write .",
-    "build": "tsc",
-    "build:watch": "tsc -w",
+    "build": "yarn clean && tsc",
+    "build:watch": "yarn build -w",
     "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
-    "@types/testing-library__jest-dom": "^6.0.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -37,8 +37,6 @@
     "typescript-eslint": "^7.8.0"
   },
   "dependencies": {
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
