--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "scripts": {
     "react-card-gen": "node ./build/react-card-gen.js",
+    "clean": "rm -rf ./build",
     "lint": "eslint",
     "format": "prettier --write .",
-    "build": "tsc",
-    "build:watch": "tsc -w",
+    "build": "yarn clean && tsc",
+    "build:watch": "yarn build -w",
     "test": "jest"
   },
   "devDependencies": {
     "@eslint/js": "^9.1.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
@@ -28,8 +31,19 @@
     "globals": "^15.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.8.0"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "setupFilesAfterEnv": [
+      "<rootDir>/jest.setup.ts"
+    ]
   }
 }
