--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@eslint/js": "^9.1.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
+    "@types/papaparse": "^5.3.14",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "eslint": "^8.56.0",
@@ -37,6 +38,7 @@
     "typescript-eslint": "^7.8.0"
   },
   "dependencies": {
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
