--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript-eslint": "^7.8.0"
   },
   "dependencies": {
+    "node-html-to-image": "^4.0.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
