--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "typescript-eslint": "^7.8.0"
   },
   "dependencies": {
+    "@types/yargs": "^17.0.32",
     "node-html-to-image": "^4.0.0",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "yargs": "^17.7.2"
   },
   "jest": {
     "preset": "ts-jest",
