--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "rxjs": "^7.8.1",
     "yargs": "^17.7.2"
   },
   "jest": {
