--- a/examples/config.yml
+++ b/examples/config.yml
@@ -1,11 +1,11 @@
 ---
-deck:
-  - cards-parser: csv
-    list: ./examples/deck_1.csv
+decks:
+  - cardsParser: csv
+    list: ./examples/basic-layout-with-image.csv
     layout: react
-    output-dir: generated
+    outputDir: generated
     output:
       - renderer: raw
-        output-dir: raw-layout
-      - renderer: node-individual-images
-        output-dir: individual
+        outputDir: raw-layout
+      - renderer: nodeIndividual
+        outputDir: individual
